# Kindle-to-pdf

./: .gitignore  INSTALL.md  README.md  com.kindle2md.watcher.plist  pyproject.toml  requirements.txt  scattered_minds.md  scattered_minds_distillation.md  scattered_minds_insights.md  watch.sh
output/6_Keys_to_Mastery_--_Robert_Green/: 6_keys_to_mastery.json  6_keys_to_mastery_distillation.md  6_keys_to_mastery_insights.md
output/A_Calendar_of_Wisdom_--_Leo_Tolstoy/: a_calendar_of_wisdom.json  a_calendar_of_wisdom_distillation.md
output/A_Parents_Guide_to_High-Functioning_Autism_Spectrum_--_Dawson_GeraldineMcPartlan/: a_parents_guide_to_high-functioning_autism_spectrum.json  a_parents_guide_to_high-functioning_autism_spectrum_distillation.md  a_parents_guide_to_high-functioning_autism_spectrum_insights.md
output/Alexander_Hamilton_--_Chernow_Ron/: alexander_hamilton.json  alexander_hamilton_distillation.md  alexander_hamilton_insights.md
output/Antifragile_-_things_that_gain_from_disorder_--_Nassim_Nicholas_Taleb_Nassim_Nic/: antifragile.json  antifragile_distillation.md  antifragile_insights.md
output/Atomic_Habits-_An_Easy_and_Proven_Way_to_Build_Good_Habits_--_Clear_James/: atomic_habits-_an_easy_and_proven_way_to_build_good_habits.json  atomic_habits-_an_easy_and_proven_way_to_build_good_habits_distillation.md  atomic_habits-_an_easy_and_proven_way_to_build_good_habits_insights.md
src/: config.py
src/cli/: commands.py
src/converters/: book_markdown.py
templates/: distillation_assembly.md  distillation_chapter.md  insights_synthesis.md
(+21 files in other folders)
